--- a/orb-slam/CMakeLists.txt
+++ b/orb-slam/CMakeLists.txt
@@ -39,7 +39,7 @@ endif()
 find_package(Eigen3 3.1.0 REQUIRED)
 find_package(Pangolin REQUIRED)
 find_package(PahoMqttCpp REQUIRED)
-find_package(PahoMqttC REQUIRED)
+find_dependency(PahoMqttC REQUIRED)
 
 include(FindPkgConfig)
 pkg_check_modules(CURLPP REQUIRED curlpp)
