--- a/orb-slam/CMakeLists.txt
+++ b/orb-slam/CMakeLists.txt
@@ -107,7 +107,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Examples/Stereo)
 
 add_executable(stereo_kitti
 Examples/Stereo/stereo_kitti.cc)
-target_link_libraries(stereo_kitti ${PROJECT_NAME} paho-mqttpp3 paho-mq)
+target_link_libraries(stereo_kitti ${PROJECT_NAME} paho-mqttpp3 paho-mqtt3as)
 
 add_executable(stereo_euroc
 Examples/Stereo/stereo_euroc.cc)
