--- a/orb-slam/CMakeLists.txt
+++ b/orb-slam/CMakeLists.txt
@@ -132,6 +132,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Vocabulary)
 add_executable(bin_vocabulary Vocabulary/bin_vocabulary.cpp)
 target_link_libraries(bin_vocabulary ${PROJECT_SOURCE_DIR}/Thirdparty/DBoW2/lib/libDBoW2.so ${OpenCV_LIBS})
 
+# ./Examples/Stereo/stereo_kitti Vocabulary/ORBvoc.bin Examples/Stereo/KITTI00-02.yaml ~/test 0
+
 if(USE_EXAMPLE_WEBCAM)
     find_package(PkgConfig REQUIRED)
     pkg_search_module(CURL REQUIRED libcurl)
