--- a/orb-slam/Examples/Stereo/KITTI00-02.yaml
+++ b/orb-slam/Examples/Stereo/KITTI00-02.yaml
@@ -103,7 +103,7 @@ RIGHT.P:  !!opencv-matrix
 #--------------------------------------------------------------------------------------------
 
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 1000 #1200
+ORBextractor.nFeatures: 1200
 
 # ORB Extractor: Scale factor between levels in the scale pyramid 	
 ORBextractor.scaleFactor: 1.2
